client/style/styles.css
:root {
    --unit: 1rem;
}
@media (max-height: 1000px) or (max-width: 1000px) {
    :root {
        --unit: 0.4rem;
    }
}

html,
body {
    padding: 0;
    margin: 0;
}
html {
    overflow: clip;
}
body {
    font-family: Arial, sans-serif;
    overflow: clip;
}
canvas {
    display: block;
}
* {
    box-sizing: border-box;
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    touch-action: manipulation;
    -ms-touch-action: manipulation;
}
#watermark > * {
    margin: 0;
}
#container {
    overflow: hidden;
    width: 100vw;
    height: 100vh;
    position: fixed;
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr;
}
#container > * {
    grid-area: 1 / 1;
}
#container > *:not(#overlay) {
    z-index: 1;
}

.pointer-events {
    pointer-events: auto;
}
    .button {
        background-size: contain;
    }
#overlay {
    pointer-events: none;
    z-index: 2;
    width: 100vw;
    height: 100vh;
    margin: 0;
    overflow: hidden;

    > .nodeMenu {
        --x-side: -50%;
        --y-side: -50%;
        position: absolute;
        transform: translate(var(--x-side), var(--y-side)) scale(var(--scale));
        margin: 0;
        padding: 0;
        top: var(--y);
        left: var(--x);
        overflow: visible;
        background-size: auto;
        background-repeat: no-repeat;
        background-origin: center;
        &.right {
            --x-side: 5%;
        }
        &.left {
            --x-side: -125%;
        }
        > .button {
            transform: translate(var(--left), var(--top));
            transition: all 0.3s ease-out; 
        }
        > .button:active {
            filter: brightness(180%);
            transition: all 2s ease-out; 
        }
        &.reveal {
            --mask-source: linear-gradient(to right, #fff 0%, #fff 50%, #0000 51%, #0000 100%);
            mask-image: var(--mask-source);
            -webkit-mask-image: var(--mask-source);
            mask-mode: alpha;
            mask-size: 400% 100%;
            mask-repeat: no-repeat;
            -webkit-mask-size: 400% 100%;
            transition: mask-position 0.35s ease-in-out; 
        }
        @starting-style {
            &.reveal {
                mask-position: 75%;
                -webkit-mask-position: 75%;
            }
        }

        &.reveal.show {
            mask-position: 30%;
            -webkit-mask-position: 30%;
        }

        &.reveal.hide {
            mask-position: 75%;
            -webkit-mask-position: 75%;
        }
    }

    > .button-menu {
        position: absolute;
        top: 30%;
        left: calc(var(--unit) / 2);
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        margin: 0;
        overflow-y: scroll;
        overflow-x: hidden;
        max-width: 50%;
        scrollbar-width: none;
    }
    > .button-menu * {
        overflow-y: hidden;
    }
    > .button-menu textarea {
        resize: none;
    }

    > .attack-bar-menu > .button,
    > .attack-focus-menu > .button {
        overflow: hidden;
    }

    > .attack-focus-menu {
        position: absolute;
        top: calc(var(--unit) / 2);
        right: calc(var(--unit) / 2);
        display: grid;
        grid-template-columns: repeat(6, 1fr);
        grid-auto-flow: dense;
        gap: calc(var(--unit) / 10);
        place-items: center;
        scrollbar-width: none;
        > *:nth-child(5n - 4),
        > *:nth-child(5n - 3) {
            grid-column: span 3;
        }
        > *:nth-child(5n - 4) {
            justify-self: right;
        }
        > *:nth-child(5n - 3) {
            justify-self: left;
        }

        > *:nth-child(5n - 2),
        > *:nth-child(5n - 1),
        > *:nth-child(5n) {
            grid-column: span 2;
        }
        
        &.reveal > * {
            --index: 0; /* used for offsetting animations */
            transition: transform 0.2s ease-in-out calc(0.35s * calc(var(--index) * 0.15));
        }
        @starting-style {
            &.reveal > * {
                transform: rotate(0deg) scale(0);
                -webkit-transform: rotate(0deg) scale(0);
                -moz-transform: rotate(0deg) scale(0);
            }
        }
        &.reveal.show > * {
            transform: rotate(360deg) scale(1);
            -webkit-transform: rotate(360deg) scale(1);
            -moz-transform: rotate(360deg) scale(1);
        }
        &.reveal.hide > * {
            transform: rotate(0deg) scale(0);
            -webkit-transform: rotate(0deg) scale(0);
            -moz-transform: rotate(0deg) scale(0);
        }
    }
    > .attack-bar-menu {
        position: fixed;
        bottom: calc(var(--unit) / 2);
        left: 50%;
        transform: translateX(-50%);
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        margin: 0 auto;
        overflow-y: hidden;
        overflow-x: scroll;
        place-items: center;
        scrollbar-width: none;
    }

    > #menu {
        --center-offset-diameter-x: calc(var(--unit) * 30);
        --center-offset-diameter-y: calc(var(--unit) * 10);
        z-index: 10;
        position: fixed;
        top: 0;
        bottom: 0;
        margin: 0;
        width: 100vw;
        height: 100vh;
        padding: 5rem;
        backdrop-filter: blur(10px);
        pointer-events: all;
        background: url("../source/menu/menu-background-pattern.png"), rgba(0,0,0,0.95);
        background-size: 5%;
        background-blend-mode: difference;
        background-repeat: repeat;

        * {
            pointer-events: none;
        }
        > * {
            position: absolute;
        }
        .pointer-events {
            pointer-events: all;
        }
        .button {
            background-blend-mode: luminosity;
        }
        .no-bg {
            
        }
        > div.top-left,
        > div.bottom-left,
        > div.top-right,
        > div.bottom-right {
            display: flex;
            flex-direction: column;
            flex-wrap: nowrap;
            place-items: start;
            > .button {
                margin: calc(var(--unit) * -3) 0;
            }
        }
        > div.top-left {
            bottom: calc(50% + calc(var(--center-offset-diameter-y) / 2));
            right: calc(50% + calc(var(--center-offset-diameter-x) / 2));
            transform: scaleX(-1);
        }
        > div.bottom-left {
            top: calc(50% + calc(var(--center-offset-diameter-y) / 2));
            right: calc(50% + calc(var(--center-offset-diameter-x) / 2));
            transform: scaleX(-1);
        }
        > div.top-right {
            bottom: calc(50% + calc(var(--center-offset-diameter-y) / 2));
            left: calc(50% + calc(var(--center-offset-diameter-x) / 2));
        }
        > div.bottom-right {
            top: calc(50% + calc(var(--center-offset-diameter-y) / 2));
            left: calc(50% + calc(var(--center-offset-diameter-x) / 2));
        }
    }
    @media (orientation: portrait) {
        > #menu {
            --center-offset-diameter-x: calc(var(--unit) * 10);
            --center-offset-diameter-y: calc(var(--unit) * 30);
        }
    }
}

